--- a/serenity-app/build.gradle
+++ b/serenity-app/build.gradle
@@ -9,8 +9,8 @@ apply plugin: "kotlin-kapt"
 apply plugin: "kotlin-allopen"
 apply plugin: "jacoco"
 apply plugin: 'org.sonarqube'
+apply plugin: 'com.google.firebase.crashlytics'
 apply plugin: 'com.google.gms.google-services'
-apply plugin: 'io.fabric'
 
 sonarqube {
   properties {
@@ -29,8 +29,8 @@ allOpen {
 
 android {
   defaultConfig {
-    versionCode 2010000
-    versionName "2.1.0-M3"
+    versionCode 3000000
+    versionName "3.0.0-M1"
     minSdkVersion 22
     targetSdkVersion 31
     multiDexEnabled true
@@ -120,7 +120,9 @@ android {
 
 dependencies {
 
-//  implementation project(':plexapp-rest-library')
+  implementation platform('com.google.firebase:firebase-bom:28.4.1')
+
+
   implementation project(':subtitle-converter')
   implementation project(':emby-lib')
   implementation project(':serenity-android-common')
@@ -132,8 +134,8 @@ dependencies {
     }
   }
 
-  implementation 'com.google.firebase:firebase-analytics:17.5.0'
-  implementation 'com.crashlytics.sdk.android:crashlytics:2.10.1'
+  implementation 'com.google.firebase:firebase-analytics'
+  implementation 'com.google.firebase:firebase-crashlytics'
 
   implementation group: 'com.github.bumptech.glide', name: 'okhttp3-integration', version: "$glideOkHttpVersion"
   implementation("com.google.android.exoplayer:exoplayer-core:$exoplayerVersion") {
@@ -239,7 +241,7 @@ dependencies {
   kapt "com.jakewharton:butterknife-compiler:$butterKnifeVersion"
 }
 
-com.google.gms.googleservices.GoogleServicesPlugin.config.disableVersionCheck = true
+//com.google.gms.googleservices.GoogleServicesPlugin.config.disableVersionCheck = true
 
 jacoco {
    toolVersion = "0.8.7"
