--- a/settings.gradle
+++ b/settings.gradle
@@ -1,4 +1,4 @@
 include ':serenity-app', ':emby-lib', ':serenity-common', ':serenity-android-common'
 include ':subtitle-converter'
-include ':plexapp-rest-library'
+//include ':plexapp-rest-library'
 
