--- a/serenity-app/build.gradle
+++ b/serenity-app/build.gradle
@@ -1,7 +1,11 @@
+plugins {
+  id 'project-report'
+}
 
 evaluationDependsOn(":emby-lib")
 //evaluationDependsOn(':plexapp-rest-library')
 evaluationDependsOn(':subtitle-converter')
+
 
 apply plugin: 'com.android.application'
 apply plugin: 'kotlin-android'
@@ -153,6 +157,7 @@ dependencies {
     exclude group: 'com.android.support'
   }
 
+  implementation("androidx.fragment:fragment-ktx:1.4.0")
   implementation 'com.google.android.material:material:1.4.0'
   implementation "org.jetbrains.kotlin:kotlin-stdlib-jdk8:$kotlinVersion"
   implementation "org.jetbrains.kotlin:kotlin-reflect:$kotlinVersion"
@@ -163,7 +168,7 @@ dependencies {
   implementation "com.github.bumptech.glide:glide:$glideVersion"
   kapt "com.github.bumptech.glide:compiler:$glideVersion"
   implementation "org.greenrobot:eventbus:$eventBus"
-  implementation "com.birbit:android-priority-jobqueue:$androidPriorityJobQueueVersion"
+  implementation("com.birbit:android-priority-jobqueue:$androidPriorityJobQueueVersion")
   implementation "androidx.appcompat:appcompat:1.3.1"
   implementation "androidx.leanback:leanback:1.1.0-rc02"
   implementation "androidx.leanback:leanback-preference:1.1.0-rc01"
@@ -278,4 +283,10 @@ task jacocoTestReport(type: JacocoReport, dependsOn: 'testDebugUnitTest') {
   ]))
 
   executionData.setFrom(files("${buildDir}/jacoco/testDebugUnitTest.exec"))
+}
+
+configurations.all {
+  resolutionStrategy {
+    force 'androidx.fragment:fragment:1.4.0'
+  }
 }
