Issue #438 add basic details screen for movies and tv series

--- a/serenity-app/src/main/AndroidManifest.xml
+++ b/serenity-app/src/main/AndroidManifest.xml
@@ -152,6 +152,10 @@
 
         <activity android:name=".ui.activity.OverscanSetupActivity" />
 
+        <activity android:name=".ui.activity.leanback.details.DetailsActivity"
+            android:theme="@style/Theme.AppCompat.Leanback.Details"
+            />
+
         <service android:name=".core.services.MovieSearchIntentService" />
 
         <provider
