Improve GRADLE build Performance

--- a/gradle.properties
+++ b/gradle.properties
@@ -1,4 +1,4 @@
-org.gradle.daemon=false
+org.gradle.daemon=true
 org.gradle.jvmargs=-Xms256m -Xmx512m -XX:+UseStringDeduplication
 kotlin.incremental=true
 org.gradle.configureondemand=false
