--- a/build.gradle
+++ b/build.gradle
@@ -1,11 +1,5 @@
 buildscript {
 
-
-  ext {
-    kotlinVersion = "1.5.30"
-    androidPluginVersion = "4.2.2"
-  }
-
   repositories {
     mavenCentral()
     google()
@@ -14,10 +8,10 @@ buildscript {
   dependencies {
     classpath 'com.google.gms:google-services:4.3.10'
     classpath 'com.google.firebase:firebase-crashlytics-gradle:2.7.1'
-    classpath "com.android.tools.build:gradle:$androidPluginVersion"
+    classpath "com.android.tools.build:gradle:$Versions.androidPluginVersion"
     classpath "org.sonarsource.scanner.gradle:sonarqube-gradle-plugin:2.8"
-    classpath "org.jetbrains.kotlin:kotlin-gradle-plugin:$kotlinVersion"
-    classpath "org.jetbrains.kotlin:kotlin-allopen:$kotlinVersion"
+    classpath "org.jetbrains.kotlin:kotlin-gradle-plugin:$Versions.kotlinVersion"
+    classpath "org.jetbrains.kotlin:kotlin-allopen:$Versions.kotlinVersion"
     classpath "org.jacoco:org.jacoco.core:0.8.7"
   }
 }
@@ -65,39 +59,4 @@ subprojects {
      exceptionFormat = "full"
    }
   }
-}
-
-project.ext {
-  appversion = "2.1.0"
-  okhttpVersion = "4.9.1"
-  kotlinVersion = "1.5.21"
-  androidPriorityJobQueueVersion = "2.0.1"
-  daggerVersion = "1.2.5"
-  eventBus = "3.1.1"
-  moshiKotlinVersion = "1.12.0"
-  retrofitVersion = "2.9.0"
-  jodaTimeVersion = "2.10.9.1"
-  timberVersion = "5.0.1"
-  exoplayerVersion = "2.17.1"
-  glideOkHttpVersion = "4.12.0"
-  moxyVersion = "2.2.2"
-  glideVersion = "4.12.0"
-  googleAnalyticsVersion = "16.0.4"
-  universalCharDetVersion = "1.0.3"
-  butterKnifeVersion = "10.2.1"
-  simpleXmlVersion = "2.7.1"
-  urlManager = "1.4.0"
-
-  commonsLangVersion = "3.7"
-  junitVersion = "4.13.1"
-  assertkVersion = "0.24"
-  assertjVersion = "3.11.1"
-  mockitoVersion = "3.12.4"
-  robolectricVersion = "4.7.3"
-  openglApiVersion = "gl1.1-android-2.1_r1"
-  xmlUnitVersion = "1.3"
-  assertJAndroidVersion = "1.1.1"
-  commonsioVersion = "2.6"
-  jacocoVersion = "0.8.7"
-  toothPickVersion = "3.1.0"
 }
