--- a/emby-lib/build.gradle
+++ b/emby-lib/build.gradle
@@ -1,15 +1,16 @@
+
 apply plugin: 'com.android.library'
 apply plugin: 'kotlin-android'
 apply plugin: 'kotlin-kapt'
 
 android {
   defaultConfig {
-    minSdkVersion 22
-    targetSdkVersion 31
+    minSdkVersion Versions.minSdkVersion
+    targetSdkVersion Versions.targetSdkVersion
 
   }
 
-  compileSdkVersion 31
+  compileSdkVersion Versions.targetSdkVersion
   testOptions.unitTests.includeAndroidResources = true
 
   sourceSets {
@@ -20,60 +21,60 @@ android {
   buildTypes {
 
     debug {
-      buildConfigField("String", "CLIENT_VERSION", "\"$appversion\"")
+      buildConfigField("String", "CLIENT_VERSION", "\"$Versions.appversion\"")
     }
     
     release {
-      buildConfigField("String", "CLIENT_VERSION", "\"$appversion\"")
+      buildConfigField("String", "CLIENT_VERSION", "\"$Versions.appversion\"")
     }
   }
 }
 
 dependencies {
-  implementation "org.jetbrains.kotlin:kotlin-stdlib-jdk8:$kotlinVersion"
-  implementation "org.jetbrains.kotlin:kotlin-reflect:$kotlinVersion"
-
   api project(':serenity-common')
   api project(':serenity-android-common')
 
-  releaseApi("com.github.stephanenicolas.toothpick:toothpick-runtime:$toothPickVersion") {
+  implementation "org.jetbrains.kotlin:kotlin-stdlib-jdk8:$Versions.kotlinVersion"
+
+
+  releaseApi("com.github.stephanenicolas.toothpick:toothpick-runtime:$Versions.toothPickVersion") {
     exclude group: 'javax.inject'
   }
-  releaseApi("com.github.stephanenicolas.toothpick:smoothie:$toothPickVersion") {
+  releaseApi("com.github.stephanenicolas.toothpick:smoothie:$Versions.toothPickVersion") {
     exclude group: 'javax.inject'
   }
 
-  debugImplementation("com.github.stephanenicolas.toothpick:toothpick-runtime:$toothPickVersion")
-  debugImplementation("com.github.stephanenicolas.toothpick:smoothie:$toothPickVersion")
+  debugImplementation("com.github.stephanenicolas.toothpick:toothpick-runtime:$Versions.toothPickVersion")
+  debugImplementation("com.github.stephanenicolas.toothpick:smoothie:$Versions.toothPickVersion")
 
-  releaseApi "com.github.stephanenicolas.toothpick:toothpick-javax-annotations:$toothPickVersion"
-  kapt "com.github.stephanenicolas.toothpick:toothpick-compiler:$toothPickVersion"
+  releaseApi "com.github.stephanenicolas.toothpick:toothpick-javax-annotations:$Versions.toothPickVersion"
+  kapt "com.github.stephanenicolas.toothpick:toothpick-compiler:$Versions.toothPickVersion"
 
-  api "com.birbit:android-priority-jobqueue:$androidPriorityJobQueueVersion"
-  api "org.greenrobot:eventbus:$eventBus"
-  api "com.squareup.moshi:moshi-kotlin:$moshiKotlinVersion"
-  api "com.squareup.retrofit2:converter-moshi:$retrofitVersion"
-  api "net.danlew:android.joda:$jodaTimeVersion"
-  api "com.squareup.retrofit2:retrofit:$retrofitVersion"
-  api "com.squareup.okhttp3:okhttp:$okhttpVersion"
-  api "com.squareup.okhttp3:logging-interceptor:$okhttpVersion"
-  api "me.jessyan:retrofit-url-manager:$urlManager"
-  api "com.jakewharton.timber:timber:$timberVersion"
+  api "com.birbit:android-priority-jobqueue:$Versions.androidPriorityJobQueueVersion"
+  api "org.greenrobot:eventbus:$Versions.eventBus"
+  api "com.squareup.moshi:moshi-kotlin:$Versions.moshiKotlinVersion"
+  api "com.squareup.retrofit2:converter-moshi:$Versions.retrofitVersion"
+  api "net.danlew:android.joda:$Versions.jodaTimeVersion"
+  api "com.squareup.retrofit2:retrofit:$Versions.retrofitVersion"
+  api "com.squareup.okhttp3:okhttp:$Versions.okhttpVersion"
+  api "com.squareup.okhttp3:logging-interceptor:$Versions.okhttpVersion"
+  api "me.jessyan:retrofit-url-manager:$Versions.urlManager"
+  api "com.jakewharton.timber:timber:$Versions.timberVersion"
   api "com.github.nisrulz:easydeviceinfo-base:2.4.1"
   api "com.github.nisrulz:easydeviceinfo-common:2.4.1"
 
-  testImplementation "junit:junit:$junitVersion"
-  testImplementation "org.assertj:assertj-core:$assertjVersion"
-  testImplementation "org.mockito:mockito-core:$mockitoVersion"
-  testImplementation("org.robolectric:robolectric:$robolectricVersion")
-  testImplementation "org.robolectric:shadows-framework:$robolectricVersion"
-  testImplementation "org.robolectric:shadowapi:$robolectricVersion"
-  testImplementation "org.robolectric:shadows-playservices:$robolectricVersion"
-  testImplementation "org.khronos:opengl-api:$openglApiVersion"
+  testImplementation "junit:junit:$Versions.junitVersion"
+  testImplementation "org.assertj:assertj-core:$Versions.assertjVersion"
+  testImplementation "org.mockito:mockito-core:$Versions.mockitoVersion"
+  testImplementation("org.robolectric:robolectric:$Versions.robolectricVersion")
+  testImplementation "org.robolectric:shadows-framework:$Versions.robolectricVersion"
+  testImplementation "org.robolectric:shadowapi:$Versions.robolectricVersion"
+  testImplementation "org.robolectric:shadows-playservices:$Versions.robolectricVersion"
+  testImplementation "org.khronos:opengl-api:$Versions.openglApiVersion"
   testImplementation "androidx.test:core:1.4.0"
 
-  testImplementation "com.github.stephanenicolas.toothpick:toothpick-testing:$toothPickVersion"
-  kaptTest "com.github.stephanenicolas.toothpick:toothpick-compiler:$toothPickVersion"
+  testImplementation "com.github.stephanenicolas.toothpick:toothpick-testing:$Versions.toothPickVersion"
+  kaptTest "com.github.stephanenicolas.toothpick:toothpick-compiler:$Versions.toothPickVersion"
 
 }
 
