--- a/serenity-app/build.gradle
+++ b/serenity-app/build.gradle
@@ -35,8 +35,8 @@ android {
   defaultConfig {
     versionCode 3000000
     versionName "3.0.0-M1"
-    minSdkVersion 22
-    targetSdkVersion 31
+    minSdkVersion Versions.minSdkVersion
+    targetSdkVersion Versions.targetSdkVersion
     multiDexEnabled true
     multiDexKeepProguard file("multidex_keep_file.txt")
 
@@ -56,7 +56,7 @@ android {
     test.java.srcDirs += 'src/test/kotlin'
   }
 
-  compileSdkVersion 31
+  compileSdkVersion Versions.targetSdkVersion
   testOptions.unitTests.includeAndroidResources = true
 
   if (project.hasProperty("keystore")) {
@@ -141,34 +141,33 @@ dependencies {
   implementation 'com.google.firebase:firebase-analytics'
   implementation 'com.google.firebase:firebase-crashlytics'
 
-  implementation group: 'com.github.bumptech.glide', name: 'okhttp3-integration', version: "$glideOkHttpVersion"
-  implementation("com.google.android.exoplayer:exoplayer-core:$exoplayerVersion") {
+  implementation group: 'com.github.bumptech.glide', name: 'okhttp3-integration', version: "$Versions.glideOkHttpVersion"
+  implementation("com.google.android.exoplayer:exoplayer-core:$Versions.exoplayerVersion") {
     exclude module: 'support-annotations'
   }
-  implementation("com.google.android.exoplayer:exoplayer-ui:$exoplayerVersion") {
-    exclude module: 'support-annotations'
-  }
-
-  implementation("com.google.android.exoplayer:extension-okhttp:$exoplayerVersion") {
+  implementation("com.google.android.exoplayer:exoplayer-ui:$Versions.exoplayerVersion") {
     exclude module: 'support-annotations'
   }
 
-  implementation("com.squareup.okhttp3:okhttp:$okhttpVersion") {
+  implementation("com.google.android.exoplayer:extension-okhttp:$Versions.exoplayerVersion") {
+    exclude module: 'support-annotations'
+  }
+
+  implementation("com.squareup.okhttp3:okhttp:$Versions.okhttpVersion") {
     exclude group: 'com.android.support'
   }
 
   implementation("androidx.fragment:fragment-ktx:1.4.0")
   implementation 'com.google.android.material:material:1.4.0'
-  implementation "org.jetbrains.kotlin:kotlin-stdlib-jdk8:$kotlinVersion"
-  implementation "org.jetbrains.kotlin:kotlin-reflect:$kotlinVersion"
+  implementation "org.jetbrains.kotlin:kotlin-stdlib-jdk8:$Versions.kotlinVersion"
   implementation 'org.jetbrains.kotlinx:kotlinx-coroutines-android:1.3.9'
-  implementation "com.github.moxy-community:moxy:$moxyVersion"
-  implementation "com.github.moxy-community:moxy-app-compat:$moxyVersion"
-  implementation "com.github.moxy-community:moxy-ktx:$moxyVersion"
-  implementation "com.github.bumptech.glide:glide:$glideVersion"
-  kapt "com.github.bumptech.glide:compiler:$glideVersion"
-  implementation "org.greenrobot:eventbus:$eventBus"
-  implementation("com.birbit:android-priority-jobqueue:$androidPriorityJobQueueVersion")
+  implementation "com.github.moxy-community:moxy:$Versions.moxyVersion"
+  implementation "com.github.moxy-community:moxy-app-compat:$Versions.moxyVersion"
+  implementation "com.github.moxy-community:moxy-ktx:$Versions.moxyVersion"
+  implementation "com.github.bumptech.glide:glide:$Versions.glideVersion"
+  kapt "com.github.bumptech.glide:compiler:$Versions.glideVersion"
+  implementation "org.greenrobot:eventbus:$Versions.eventBus"
+  implementation("com.birbit:android-priority-jobqueue:$Versions.androidPriorityJobQueueVersion")
   implementation "androidx.appcompat:appcompat:1.3.1"
   implementation "androidx.leanback:leanback:1.1.0-rc02"
   implementation "androidx.leanback:leanback-preference:1.1.0-rc01"
@@ -176,31 +175,31 @@ dependencies {
   implementation 'androidx.constraintlayout:constraintlayout:2.1.0'
   implementation "androidx.percentlayout:percentlayout:1.0.0"
   implementation "androidx.annotation:annotation:1.2.0"
-  implementation "com.googlecode.juniversalchardet:juniversalchardet:$universalCharDetVersion"
-  implementation "com.squareup.okhttp3:logging-interceptor:$okhttpVersion"
-  implementation "me.jessyan:retrofit-url-manager:$urlManager"
-  implementation "com.squareup.okhttp3:okhttp-urlconnection:$okhttpVersion"
-  implementation "com.jakewharton:butterknife:$butterKnifeVersion"
-  implementation "com.jakewharton.timber:timber:$timberVersion"
+  implementation "com.googlecode.juniversalchardet:juniversalchardet:$Versions.universalCharDetVersion"
+  implementation "com.squareup.okhttp3:logging-interceptor:$Versions.okhttpVersion"
+  implementation "me.jessyan:retrofit-url-manager:$Versions.urlManager"
+  implementation "com.squareup.okhttp3:okhttp-urlconnection:$Versions.okhttpVersion"
+  implementation "com.jakewharton:butterknife:$Versions.butterKnifeVersion"
+  implementation "com.jakewharton.timber:timber:$Versions.timberVersion"
   implementation "androidx.cardview:cardview:1.0.0"
   implementation "androidx.annotation:annotation:1.2.0"
 
-  releaseImplementation("com.github.stephanenicolas.toothpick:toothpick-runtime:$toothPickVersion") {
+  releaseImplementation("com.github.stephanenicolas.toothpick:toothpick-runtime:$Versions.toothPickVersion") {
     exclude group: 'javax.inject'
   }
-  releaseImplementation("com.github.stephanenicolas.toothpick:smoothie:$toothPickVersion") {
+  releaseImplementation("com.github.stephanenicolas.toothpick:smoothie:$Versions.toothPickVersion") {
     exclude group: 'javax.inject'
   }
 
-  debugImplementation("com.github.stephanenicolas.toothpick:toothpick-runtime:$toothPickVersion")
+  debugImplementation("com.github.stephanenicolas.toothpick:toothpick-runtime:$Versions.toothPickVersion")
 
-  releaseImplementation "com.github.stephanenicolas.toothpick:toothpick-javax-annotations:$toothPickVersion"
-  kapt "com.github.stephanenicolas.toothpick:toothpick-compiler:$toothPickVersion"
+  releaseImplementation "com.github.stephanenicolas.toothpick:toothpick-javax-annotations:$Versions.toothPickVersion"
+  kapt "com.github.stephanenicolas.toothpick:toothpick-compiler:$Versions.toothPickVersion"
 
-  implementation "com.squareup.moshi:moshi-kotlin:$moshiKotlinVersion"
-  implementation "com.squareup.retrofit2:converter-moshi:$retrofitVersion"
-  implementation "net.danlew:android.joda:$jodaTimeVersion"
-  implementation "com.squareup.retrofit2:retrofit:$retrofitVersion"
+  implementation "com.squareup.moshi:moshi-kotlin:$Versions.moshiKotlinVersion"
+  implementation "com.squareup.retrofit2:converter-moshi:$Versions.retrofitVersion"
+  implementation "net.danlew:android.joda:$Versions.jodaTimeVersion"
+  implementation "com.squareup.retrofit2:retrofit:$Versions.retrofitVersion"
   implementation 'com.google.android:flexbox:1.1.0'
   implementation 'com.henryblue.library:tvrecyclerview:1.2.2'
   implementation 'jp.wasabeef:recyclerview-animators:3.0.0'
@@ -210,41 +209,41 @@ dependencies {
   }
 
   // https://mvnrepository.com/artifact/org.simpleframework/simple-xml
-  implementation("org.simpleframework:simple-xml:$simpleXmlVersion") {
+  implementation("org.simpleframework:simple-xml:$Versions.simpleXmlVersion") {
     exclude group: 'stax'
     exclude group: 'xpp3'
   }
 
   testImplementation "com.nhaarman.mockitokotlin2:mockito-kotlin:2.2.0"
-  testImplementation "org.apache.commons:commons-lang3:$commonsLangVersion"
+  testImplementation "org.apache.commons:commons-lang3:$Versions.commonsLangVersion"
   testImplementation 'org.jetbrains.kotlinx:kotlinx-coroutines-test:1.5.1'
 
-  testImplementation "com.squareup.okhttp3:mockwebserver:$okhttpVersion"
-  testImplementation "commons-io:commons-io:$commonsioVersion"
-  testImplementation "com.github.stephanenicolas.toothpick:toothpick-testing:$toothPickVersion"
-  testImplementation("org.robolectric:robolectric:$robolectricVersion") {
+  testImplementation "com.squareup.okhttp3:mockwebserver:$Versions.okhttpVersion"
+  testImplementation "commons-io:commons-io:$Versions.commonsioVersion"
+  testImplementation "com.github.stephanenicolas.toothpick:toothpick-testing:$Versions.toothPickVersion"
+  testImplementation("org.robolectric:robolectric:$Versions.robolectricVersion") {
     exclude module: 'support-v4'
   }
-  testImplementation("com.squareup.assertj:assertj-android:$assertJAndroidVersion") {
+  testImplementation("com.squareup.assertj:assertj-android:$Versions.assertJAndroidVersion") {
     exclude module: 'support-v4'
     exclude module: 'support-annotations'
   }
 
-  testImplementation "com.willowtreeapps.assertk:assertk-jvm:$assertkVersion"
-  testImplementation "org.assertj:assertj-core:$assertjVersion"
-  testImplementation "junit:junit:$junitVersion"
-  testImplementation "org.robolectric:shadows-framework:$robolectricVersion@jar"
-  testImplementation "org.robolectric:shadowapi:$robolectricVersion"
-  testImplementation "org.robolectric:shadows-playservices:$robolectricVersion"
+  testImplementation "com.willowtreeapps.assertk:assertk-jvm:$Versions.assertkVersion"
+  testImplementation "org.assertj:assertj-core:$Versions.assertjVersion"
+  testImplementation "junit:junit:$Versions.junitVersion"
+  testImplementation "org.robolectric:shadows-framework:$Versions.robolectricVersion@jar"
+  testImplementation "org.robolectric:shadowapi:$Versions.robolectricVersion"
+  testImplementation "org.robolectric:shadows-playservices:$Versions.robolectricVersion"
   testImplementation "androidx.test:core:1.4.0"
-  testImplementation "org.khronos:opengl-api:$openglApiVersion"
-  testImplementation "org.mockito:mockito-core:$mockitoVersion"
+  testImplementation "org.khronos:opengl-api:$Versions.openglApiVersion"
+  testImplementation "org.mockito:mockito-core:$Versions.mockitoVersion"
   testImplementation 'androidx.test.ext:junit:1.1.3'
 
-  kaptTest "com.github.stephanenicolas.toothpick:toothpick-compiler:$toothPickVersion"
+  kaptTest "com.github.stephanenicolas.toothpick:toothpick-compiler:$Versions.toothPickVersion"
 
-  kapt "com.github.moxy-community:moxy-compiler:$moxyVersion"
-  kapt "com.jakewharton:butterknife-compiler:$butterKnifeVersion"
+  kapt "com.github.moxy-community:moxy-compiler:$Versions.moxyVersion"
+  kapt "com.jakewharton:butterknife-compiler:$Versions.butterKnifeVersion"
 }
 
 //com.google.gms.googleservices.GoogleServicesPlugin.config.disableVersionCheck = true
