--- a/gradle.properties
+++ b/gradle.properties
@@ -1,7 +1,7 @@
-org.gradle.daemon=false
-org.gradle.jvmargs=-Xms1024m -Xmx1024m -XX:+UseStringDeduplication
+org.gradle.daemon=true
+org.gradle.jvmargs=-Xms1024m -Xmx2048m -XX:+UseStringDeduplication
 kotlin.incremental=true
-org.gradle.configureondemand=false
+org.gradle.configureondemand=true
 android.useAndroidX=true
 android.enableJetifier=true
 android.jetifier.blacklist=bcprov
