--- a/gradle.properties
+++ b/gradle.properties
@@ -1,9 +1,8 @@
 org.gradle.daemon=true
-org.gradle.jvmargs=-Xms1024m -Xmx2048m -XX:+UseStringDeduplication
+org.gradle.jvmargs=-Xms1024m -Xmx1024m -XX:+UseStringDeduplication
 kotlin.incremental=true
 org.gradle.configureondemand=true
 android.useAndroidX=true
 android.enableJetifier=true
-android.jetifier.blacklist=bcprov
-
-
+android.jetifier.ignorelist=bcprov
+org.gradle.caching=true
