Fix test source folder causing unit tests to fail

--- a/gradle.properties
+++ b/gradle.properties
@@ -1,4 +1,4 @@
-org.gradle.daemon=true
+org.gradle.daemon=false
 org.gradle.jvmargs=-Xms1024m -Xmx1024m -XX:+UseStringDeduplication
 kotlin.incremental=true
 org.gradle.configureondemand=true
