--- a/gradle.properties
+++ b/gradle.properties
@@ -6,3 +6,5 @@ android.useAndroidX=true
 android.enableJetifier=true
 android.jetifier.ignorelist=bcprov
 org.gradle.caching=true
+org.gradle.parallel=true
+org.gradle.unsafe.configuration-cache=false
