Add stacktrace option to get better debug info

--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -32,7 +32,7 @@ jobs:
       # The next step will run the unit tests
 #      - android/run-tests:
 #          test-command: ./gradlew clean jacocoTestReport
-      - run: ./gradlew clean jacocoTestReport
+      - run: ./gradlew clean jacocoTestReport --stacktrace
 
       # Then start the emulator and run the Instrumentation tests!
       #- android/start-emulator-and-run-tests:
