--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -17,7 +17,7 @@ jobs:
 
     docker:
       - image: cimg/android:2023.12
-    resource-class: large
+    resource_class: large
 
     steps:
       # Checkout the code as the first step.
