Update kotlin and firebase versions

--- a/build.gradle
+++ b/build.gradle
@@ -59,4 +59,13 @@ subprojects {
      exceptionFormat = "full"
    }
   }
+
+  allprojects {
+    tasks.withType(org.jetbrains.kotlin.gradle.tasks.KotlinCompile).configureEach {
+      kotlinOptions {
+        jvmTarget = "1.8"
+      }
+    }
+  }
+
 }
